--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="logo">
           <img src="./assets/img/icons/logo.svg">
           <div class="translation">
-            <span>ua</span>
+            <span><a href="./translations.html">en</a></span>
           </div>
         </div>
         <button class="hamburger hamburger--emphatic" type="button">
@@ -184,14 +184,14 @@
           </div>
         </div>
         <div class="prices__card">
-          <div class="Tariff__card">
+          <div class="tariff__card">
             <p>Тарифный план</p>
             <h4>Легкий старт</h4>
             <h3>350</h3>
             <span>грн/мес</span>
             <p>за 1 рабочее место</p>
           </div>
-          <div class="Tariff__card">
+          <div class="tariff__card">
             <p>Тарифный план</p>
             <h4>Бизнес</h4>
             <h3>315</h3>
